Fix CSS margin issues on mobile

--- a/resources/assets/sass/_booth.scss
+++ b/resources/assets/sass/_booth.scss
@@ -1,6 +1,7 @@
 .ballot-box {
     background: $gray-lighter;
     padding: 1.5rem;
+    margin-bottom: 1.5rem;
 
     h3 {
         font-weight: bold;
